feat: /legend
